--- a/public/views/flaws/flaw_manager.html
+++ b/public/views/flaws/flaw_manager.html
@@ -49,7 +49,7 @@
     <div class="boxed-container" ng-controller="flawListController">
         <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
             <div class="logo-container">
-                <a href="#" class="logo">
+                <a href="/views/user_personage_manager.html?id={{player.id}}" class="logo">
                     <h1 ng-i18next>general.brand_name</h1>
                 </a>
             </div>
