--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -49,7 +49,7 @@
     <div ng-controller="personageController">
         <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
             <div class="logo-container">
-                <a href="#" class="logo">
+                <a href="/views/user_personage_manager.html?id={{player.id}}" class="logo">
                     <h1 ng-i18next>general.brand_name</h1>
                 </a>
             </div>
