--- a/public/views/test_loaders.html
+++ b/public/views/test_loaders.html
@@ -49,7 +49,7 @@
     <div class="boxed-container" ng-controller="testController">
         <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
             <div class="logo-container">
-                <a href="#" class="logo">
+                <a href="/views/user_personage_manager.html?id={{player.id}}" class="logo">
                     <h1>ЭРИЛОН</h1>
                 </a>
             </div>
