--- a/public/views/trigger_skills/trigger_skill.html
+++ b/public/views/trigger_skills/trigger_skill.html
@@ -46,7 +46,7 @@
     <div class="boxed-container" ng-controller="skillLevelListController">
         <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
             <div class="logo-container">
-                <a href="#" class="logo">
+                <a href="/views/user_personage_manager.html?id={{player.id}}" class="logo">
                     <h1 ng-i18next>general.brand_name</h1>
                 </a>
             </div>
