--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -605,7 +605,8 @@
                                     <p><span
                                             ng-i18next>page.character.additional_derivatives.watchfulness_hearing</span>
                                         - {{watchfulness_hearing}}d</p>
-                                    <p><span ng-i18next>page.character.additional_derivatives.bounce</span> - {{bounce}}
+                                    <p><span ng-i18next>page.character.additional_derivatives.bounce</span> -
+                                        {{bounce}}d
                                     </p>
                                     <p><span
                                             ng-i18next>page.character.additional_derivatives.falling_damage_coefficient</span>
@@ -617,9 +618,9 @@
                                     <p><span ng-i18next>page.character.additional_derivatives.appearance</span> -
                                         {{appearance}}</p>
                                     <p><span ng-i18next>page.character.additional_derivatives.cloaking_moving</span> -
-                                        {{cloaking_moving}}</p>
+                                        {{cloaking_moving}}d</p>
                                     <p><span ng-i18next>page.character.additional_derivatives.cloaking_not_moving</span>
-                                        - {{cloaking_not_moving}}</p>
+                                        - {{cloaking_not_moving}}d</p>
                                 </div>
                             </div>
                         </div>
