--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -600,6 +600,91 @@
                                         </li>
                                     </ul>
 
+                                    <p ng-i18next>page.character.additional_derivatives.move.header</p>
+
+                                    <ul>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.move.step</span><span> - {{step}}
+                                            <span ng-i18next>page.character.additional_derivatives.move.jard</span></span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.move.run</span><span> - {{run}}
+                                            <span ng-i18next>page.character.additional_derivatives.move.jard</span></span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.move.sprint</span><span> - {{sprint}}
+                                            <span ng-i18next>page.character.additional_derivatives.move.jard</span></span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.move.climbing</span><span> - {{climbing}}
+                                            <span ng-i18next>page.character.additional_derivatives.move.jard</span></span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.move.swimming</span><span> - {{swimming}}
+                                            <span ng-i18next>page.character.additional_derivatives.move.jard</span></span>
+                                        </li>
+                                    </ul>
+
+                                    <p ng-i18next>page.character.additional_derivatives.injury_boundaries.header</p>
+
+                                    <ul>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.injury_boundaries.scratches</span><span> - {{scratches}}</span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.injury_boundaries.light</span><span> - {{light_injuries}}</span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.injury_boundaries.medium</span><span> - {{medium_injuries}}</span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.injury_boundaries.heavy</span><span> - {{heavy_injuries}}</span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.injury_boundaries.deadly</span><span> - {{deadly_injuries}}</span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.injury_boundaries.death</span><span> - {{death}}</span>
+                                        </li>
+                                    </ul>
+
+                                    <p ng-i18next>page.character.additional_derivatives.hit_points.header</p>
+
+                                    <ul>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.hit_points.scratches</span><span> - {{hp_scratches}}</span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.hit_points.light</span><span> - {{hp_light_injuries}}</span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.hit_points.medium</span><span> - {{hp_medium_injuries}}</span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.hit_points.heavy</span><span> - {{hp_heavy_injuries}}</span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.hit_points.deadly</span><span> - {{hp_deadly_injuries}}</span>
+                                        </li>
+                                    </ul>
+
+                                    <p ng-i18next>page.character.additional_derivatives.damage_absorption.header</p>
+
+                                    <ul>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.damage_absorption.stub</span><span> - {{stub}}d</span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.damage_absorption.slash</span><span> - {{slash}}d</span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.damage_absorption.cut</span><span> - {{cut}}d</span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.damage_absorption.blunt</span><span> - {{blunt}}d</span>
+                                        </li>
+                                    </ul>
+
                                     <p><span ng-i18next>page.character.additional_derivatives.watchfulness_vision</span>
                                         - {{watchfulness_vision}}d</p>
                                     <p><span
