--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -616,8 +616,7 @@
                                             <span ng-i18next>page.character.additional_derivatives.move.jard</span></span>
                                         </li>
                                         <li>
-                                            <span ng-i18next>page.character.additional_derivatives.move.climbing</span><span> - {{climbing}}
-                                            <span ng-i18next>page.character.additional_derivatives.move.jard</span></span>
+                                            <span ng-i18next>page.character.additional_derivatives.move.climbing</span><span> - {{climbing}}d</span>
                                         </li>
                                         <li>
                                             <span ng-i18next>page.character.additional_derivatives.move.swimming</span><span> - {{swimming}}
