--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -684,6 +684,9 @@
                                         </li>
                                     </ul>
 
+                                    <p><span ng-i18next>page.character.additional_derivatives.mana_refresh</span>
+                                        - {{mana_refresh}} в мин</p>
+
                                     <p><span ng-i18next>page.character.additional_derivatives.watchfulness_vision</span>
                                         - {{watchfulness_vision}}d</p>
                                     <p><span
