--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -684,6 +684,23 @@
                                         </li>
                                     </ul>
 
+                                    <p ng-i18next>page.character.additional_derivatives.saving_throws.header</p>
+
+                                    <ul>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.saving_throws.horror</span><span> - {{horror}}d</span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.saving_throws.persuasion</span><span> - {{persuasion}}d</span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.saving_throws.seduction</span><span> - {{seduction}}d</span>
+                                        </li>
+                                        <li>
+                                            <span ng-i18next>page.character.additional_derivatives.saving_throws.oppression</span><span> - {{oppression}}d</span>
+                                        </li>
+                                    </ul>
+
                                     <p><span ng-i18next>page.character.additional_derivatives.mana_refresh</span>
                                         - {{mana_refresh}} в мин</p>
 
