--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -719,8 +719,10 @@
                                         {{balance_check}}</p>
                                     <p><span ng-i18next>page.character.additional_derivatives.poise_check</span> -
                                         {{poise_check}}</p>
-                                    <p><span ng-i18next>page.character.additional_derivatives.appearance</span> -
+                                    <p><span ng-i18next>page.character.appearance</span> -
                                         {{appearance}}</p>
+                                    <p><span ng-i18next>page.character.luck</span> -
+                                        {{luck}}</p>
                                     <p><span ng-i18next>page.character.additional_derivatives.cloaking_moving</span> -
                                         {{cloaking_moving}}d</p>
                                     <p><span ng-i18next>page.character.additional_derivatives.cloaking_not_moving</span>
